<resources>
    <string name="app_name">부끄북극</string>
    <string name="feed_title">환경 피드</string>
    <string name="bottom_navigation_home">홈</string>
    <string name="bottom_navigation_feed">환경 피드</string>
    <string name="bottom_navigation_ranking">랭킹</string>
    <string name="bottom_navigation_more">더보기</string>
    <string name="test_nickname">닉네임</string>
    <string name="test_posting_time">2023년 5월 7일 오후 12시 13분</string>
    <string name="login_image_bear">image_login_bear</string>
    <string name="login_btn_text">카카오톡으로 로그인</string>
    <string name="login_ic_kakaotalk">login_ic_kakaotalk</string>
    <string name="login_text_terms">가입을 진행할 경우, 이용 약관 및\n
개인 정보 취급 방침에 동의하는 것으로 간주합니다.</string>
    <string name="login_text_title">부끄북극</string>
    <string name="login_text_subtitle">북극곰에게 부끄러운 사람이 되지 말자!</string>
    <string name="btn_clicked">btn clicked</string>
    <string name="tag_login">LOGIN</string>
    <string name="terms">이용 약관</string>
    <string name="privacy_policy">개인 정보 취급 방침</string>
    <string name="terms_url">https://policy.naver.com/policy/service.html</string>
    <string name="privacy_url">https://policy.naver.com/policy/privacy.html</string>

    <string name="feed_post_like">좋아요 </string>
    <string name="count">개</string>
    <string name="test_feed_post_like_cnt">32</string>
    <string name="test_feed_post_title">환경 피드 제목</string>
    <string name="test_feed_post_content">환경 피드 내용 ... 환경 피드 내용 ... \n환경 피드 내용 ... 환경 피드 내용 ... \n환경 피드 내용 ... 환경 피드 내용 ... \n환경 피드 내용 ... 환경 피드 내용 ... \n</string>
    <string name="test_feed_post_best_reply_content">베스트 댓글</string>
    <string name="test_feed_post_reply_like_cnt">12</string>
    <string name="test_feed_post_reply_cnt">22</string>
    <string name="test_feed_post_reply_cnt_text"><![CDATA[개의 댓글 더보기 >]]></string>
    <string name="feed_post_write">작성하기</string>
    <string name="feed_post_property_revise">수정</string>
    <string name="feed_post_property_delete">삭제</string>
    <string name="feed_post_property_report">신고</string>
    <string name="feed_post_property_block">차단</string>
    <string name="feed_post_property_recent">최신</string>
    <string name="feed_comment_reply">대댓글</string>
    <string name="feed_post_property_recent_best">최근 인기</string>
    <string name="feed_post_property_best">best</string>
    <string name="signup_page_indicator">%1$d/4</string>
    <string name="signup_btn_back">뒤로가기 버튼</string>
    <string name="signup_terms_title">가입을 위한\n약관 동의가 필요해요!</string>
    <string name="signup_next">다음</string>
    <string name="signup_complete">가입 완료</string>
    <string name="signup_terms_op1">전체 동의</string>
    <string name="signup_terms_op2">만 14세 이상입니다</string>
    <string name="fliped_back_btn">fliped back btn</string>
    <string name="signup_name_title">프로필과 닉네임을\n설정해주세요</string>
    <string name="profile_icon">프로필 아이콘</string>
    <string name="hint_signup_nickname">닉네임을 입력해주세요.</string>
    <string name="signup_name_rule">최소 2글자, 최대 8글자로 입력 가능해요.</string>
    <string name="tv_signup_phone_title">휴대폰 번호를\n입력해주세요</string>
    <string name="singup_error_text">닉네임은 최소 2글자 이상, 최대 8글자 이하로 작성해주세요.</string>
    <string name="signup_check_text">사용가능한 닉네임인지 확인하고 있어요.</string>
    <string name="signup_confirm_text">사용가능한 닉네임입니다!</string>
    <string name="signup_exists_text">이미 사용중인 닉네임입니다.</string>
    <string name="signup_phone_hint">010–0000-0000</string>
    <string name="signup_phone_hint_detail">-은 자동으로 넣어드려요.</string>
    <string name="signup_phone_hint_error">올바른 번호를 입력해주세요.</string>
    <string name="signup_phone_hint_confirm">사용가능한 휴대폰 번호입니다.</string>

    <string name="tv_signup_mail_title">이메일을\n입력해주세요.</string>
    <string name="signup_mail_hint">example@naver.com</string>
    <string name="signup_mail_hint_error">example@naver.com 형식으로 입력해주세요.</string>
    <string name="signup_mail_hint_confirm">사용가능한 이메일 주소입니다.</string>
    <string name="feed_reply">댓글</string>
    <string name="feed_comment_delete_msg">삭제된 댓글입니다.</string>
    <string name="feed_detail_comment_msg">댓글을 입력해주세요.</string>
    <string name="feed_detail_reply_msg">대댓글을 입력해주세요.</string>
    <string name="more_my_info_change">내 정보 수정</string>
    <string name="more_contact">문의하기</string>
    <string name="more_open_source_library">오픈 소스 라이브러리</string>
    <string name="more_term">이용 약관</string>
    <string name="more_privacy_policy">개인 정보 처리 방침</string>
    <string name="more_usage_rules">커뮤니티 이용 수칙</string>
    <string name="more_log_out">로그아웃</string>
    <string name="more_withdraw">회원탈퇴</string>
    <string name="more_my_post_and_comment">내가 쓴 게시물/댓글</string>
    <string name="more_change_my_info_complete">수정 완료</string>

    <string name="quiz_main_write">피드 작성하기</string>
    <string name="quiz_main_write_detail">오늘은 어떻게 환경을 지키셨나요?</string>
    <string name="quiz_main_recent">🍃 최근 올라온 환경 피드</string>
    <string name="quiz_main_refresh">매일 오전 8시에 갱신돼요</string>
    <string name="quiz_main_go_quiz">오늘의 환경 문제\n같이 풀어봐요!</string>
    <string name="quiz_main_tv_go_quiz">이때까지 풀었던 문제\n복습하러 가기</string>
    <string name="quiz_main_title">교과서에 북극곰이 나오지 않는\n그날까지 함께 달려요! 🏃</string>
    <string name="quiz_main_user_name">%1$s님,</string>
    <string name="quiz_main_more"><![CDATA[더보기 >]]></string>
    <string name="quiz_page_indicator">%1$d/%2$d</string>

    <string name="quiz_daily_o">O</string>
    <string name="quiz_daily_x">X</string>
    <string name="quiz_daily_submit">제출</string>
    <string name="quiz_daily_time">남은 시간 : %1$d초</string>

    <string name="quiz_dialog_confirm">확인</string>
    <string name="quiz_dialog_point">+ %d P</string>
    <string name="quiz_dialog_stop">복습 문제를\n그만 푸시겠어요?</string>
    <string name="quiz_dialog_next">다음 문제</string>
    <string name="quiz_dialog_yes">네</string>
    <string name="quiz_dialog_no">아니오</string>
    <string name="quiz_main_polarbear">북극곰</string>
    <string name="feed_write_title">제목 입력</string>
    <string name="feed_write_content">내용 입력</string>

    <string name="check_my_info_term">조건에 맞게 다시 입력해주세요!</string>
    <string name="check_my_info_input">수정할 정보를 입력해주세요!</string>
    <string name="login_fail">로그인에 실패했습니다</string>

    <string name="feed_write_title_msg">제목을 입력해주세요!</string>
    <string name="feed_write_content_msg">내용을 입력해주세요!</string>
    <string name="feed_write_image_count_msg">이미지는 최대 5장까지 업로드 가능합니다.</string>
    <string name="check_my_info_success">내 정보를 수정하였습니다.</string>

    <string name="my_post_post">게시글</string>
    <string name="my_post_comment">댓글</string>

    <string name="features_in_preparation">준비 중인 기능입니다.</string>
    <string name="time_format">yyyy-MM-dd hh:mm:ss</string>
    <string name="feed_detail_comment_writing_msg">%s님에게 댓글을 남기는 중...</string>
    <string name="item_tools_text">글 제목</string>

    <string name="product">이번달 상품</string>
    <string name="product_sample">스타벅스 카페 아메리카노T</string>
    <string name="ranking">랭킹</string>
    <string name="ranking_rank">순위</string>
    <string name="ranking_name">닉네임</string>
    <string name="ranking_point">포인트</string>
    <string name="ranking_point_value">%d P</string>
    <string name="ranking_possible">당첨 확률</string>
    <string name="ranking_possible_value">%d%%</string>
    <string name="ranking_null">-</string>

    <string name="msg_on_back_pressed_end">한번 더 누르면 종료 됩니다.</string>
    <string name="more_logout_text">로그아웃 하시겠습니까?</string>
    <string name="more_logout_yes">예</string>
    <string name="more_logout_no">아니요</string>

    <string name="singup_duplicate_nickname_text">중복된 닉네임입니다.</string>

    <string name="Beomjun_Email">whqjawns75@gmail.com</string>
    <string name="more_contact_email_data">mail to:</string>
    <string name="more_contact_email_type">text/plain</string>
    <string name="more_contact_email_content">문의사항을 입력해주세요.</string>

    <string name="more_open_source_library_link">https://www.notion.so/f1a4ab23dcb840559135e7d269884392?pvs=4</string>

    <string name="text_non_my_post">작성한 게시글이 없습니다.</string>
    <string name="text_non_my_comment">작성한 댓글이 없습니다.</string>

</resources>
