<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline">

        <TextView
            android:id="@+id/tv_ranking_rank"
            style="@style/H5"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:text="@string/ranking_rank"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_ranking_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_ranking_point"
            app:layout_constraintStart_toEndOf="@+id/tv_ranking_rank"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_ranking_profile"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_user_base_profile" />

            <TextView
                android:id="@+id/tv_ranking_name"
                style="@style/B3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ranking_name" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_ranking_point"
            style="@style/B3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ranking_point"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_ranking_possible"
            app:layout_constraintStart_toEndOf="@+id/ll_ranking_name"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_ranking_possible"
            style="@style/B3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ranking_possible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>