<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/quiz_main_tv_name"
            style="@style/H4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/quiz_main_user_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/quiz_main_tv_title"
            style="@style/H4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/quiz_main_title"
            app:layout_constraintStart_toStartOf="@id/quiz_main_tv_name"
            app:layout_constraintTop_toBottomOf="@id/quiz_main_tv_name" />

        <View
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/activated_btn_next"
            android:layout_marginTop="12dp"
            android:id="@+id/quiz_main_btn_go_quiz"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quiz_main_tv_title" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_main_go_quiz"
            style="@style/b1"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="@+id/quiz_main_btn_go_quiz"
            app:layout_constraintStart_toStartOf="@+id/quiz_main_btn_go_quiz"
            app:layout_constraintBottom_toBottomOf="@+id/quiz_main_btn_go_quiz"
            android:textColor="@color/Blue_06"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:id="@+id/quiz_main_btn_go"
            android:rotation="180"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="@id/quiz_main_btn_go_quiz"
            app:layout_constraintTop_toTopOf="@id/quiz_main_btn_go_quiz"
            app:layout_constraintBottom_toBottomOf="@id/quiz_main_btn_go_quiz"
            app:tint="@color/White_01" />


        <View
            android:id="@+id/quiz_main_btn_write"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="116dp"
            android:background="@drawable/activated_btn_next"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/quiz_main_tv_write"
            style="@style/H4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_next"
            android:textColor="@color/White_01"
            app:layout_constraintBottom_toBottomOf="@+id/quiz_main_btn_write"
            app:layout_constraintEnd_toEndOf="@+id/quiz_main_btn_write"
            app:layout_constraintStart_toStartOf="@+id/quiz_main_btn_write"
            app:layout_constraintTop_toTopOf="@+id/quiz_main_btn_write" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>