<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_signup_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/tv_signup_name_title"
            style="@style/H3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_name_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView

            android:id="@+id/iv_signup_name_profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="65dp"
            android:contentDescription="@string/profile_icon"
            android:src="@drawable/ic_user_base_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_signup_name_title" />

        <ImageView
            android:id="@+id/iv_signup_img_edit"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:adjustViewBounds="false"
            android:clickable="true"
            android:contentDescription="@string/profile_icon"
            android:src="@drawable/ic_signup_name_edit"
            app:layout_constraintBottom_toBottomOf="@id/iv_signup_name_profile"
            app:layout_constraintEnd_toEndOf="@+id/iv_signup_name_profile" />

        <EditText
            android:id="@+id/et_signup_nickname"
            style="@style/b1"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/selector_signup_nickname"
            android:hint="@string/hint_signup_nickname"
            android:inputType="text"
            android:padding="12dp"
            android:textColorHint="@color/Gray_05"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_signup_name_profile" />

        <ImageView
            android:id="@+id/signup_et_check"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginVertical="12dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_signup_success"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/et_signup_nickname"
            app:layout_constraintEnd_toEndOf="@id/et_signup_nickname"
            app:layout_constraintTop_toTopOf="@id/et_signup_nickname" />

        <ProgressBar
            android:id="@+id/pg_signup_name_check"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:visibility="invisible"
            android:indeterminateTint="@color/Blue_02"
            android:layout_marginVertical="12dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@id/et_signup_nickname"
            app:layout_constraintEnd_toEndOf="@id/et_signup_nickname"
            app:layout_constraintTop_toTopOf="@id/et_signup_nickname" />

        <TextView
            android:id="@+id/tv_signup_name_rule"
            style="@style/l2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/signup_name_rule"
            android:textColor="@color/selector_signup_name_text_color"
            app:layout_constraintStart_toStartOf="@id/et_signup_nickname"
            app:layout_constraintTop_toBottomOf="@+id/et_signup_nickname" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>