<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/quiz_daily_btn_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/quiz_daily_problem"
            style="@style/H2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="96dp"
            android:text="문제"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quiz_daily_btn_back" />

        <TextView
            android:id="@+id/quiz_daily_o"
            style="@style/H1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_stroke_quiz_01_radius_15"
            android:gravity="center"
            android:paddingVertical="40dp"
            android:text="@string/quiz_daily_o"
            android:textColor="@color/selector_quiz_text_color"
            app:layout_constraintBottom_toTopOf="@id/quiz_daily_progress_bar"
            app:layout_constraintEnd_toStartOf="@+id/quiz_daily_x"
            app:layout_constraintStart_toStartOf="@id/quiz_daily_progress_bar"
            app:layout_constraintTop_toBottomOf="@+id/quiz_daily_problem" />

        <TextView
            style="@style/H5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:id="@+id/quiz_daily_pages"
            android:layout_marginVertical="16dp"
            android:visibility="invisible"
            android:layout_marginEnd="20dp"
            android:text="@string/signup_page_indicator"
            android:textColor="@color/Black_01"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/quiz_daily_x"
            style="@style/H1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_stroke_quiz_01_radius_15"
            android:gravity="center"
            android:paddingVertical="40dp"
            android:text="@string/quiz_daily_x"
            android:textColor="@color/selector_quiz_text_color"
            app:layout_constraintBottom_toTopOf="@id/quiz_daily_progress_bar"
            app:layout_constraintEnd_toEndOf="@id/quiz_daily_progress_bar"
            app:layout_constraintStart_toEndOf="@id/quiz_daily_o"
            app:layout_constraintTop_toBottomOf="@+id/quiz_daily_problem" />

        <ProgressBar
            android:id="@+id/quiz_daily_progress_bar"
            style="@style/CustomProgressBar"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="4dp"
            android:max="15"
            android:progress="4"
            app:layout_constraintBottom_toTopOf="@id/quiz_daily_tv_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/quiz_daily_tv_time"
            style="@style/H5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="96dp"
            android:text="@string/quiz_daily_time"
            app:layout_constraintBottom_toTopOf="@id/quiz_daily_btn_submit"
            app:layout_constraintStart_toStartOf="parent" />


        <View
            android:id="@+id/quiz_daily_btn_submit"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/selector_quiz_daily_submit"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/quiz_daily_tv_submit"
            style="@style/H4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_daily_submit"
            android:textColor="@color/White_01"
            app:layout_constraintBottom_toBottomOf="@+id/quiz_daily_btn_submit"
            app:layout_constraintEnd_toEndOf="@+id/quiz_daily_btn_submit"
            app:layout_constraintStart_toStartOf="@+id/quiz_daily_btn_submit"
            app:layout_constraintTop_toTopOf="@+id/quiz_daily_btn_submit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>